--- a/Toshokan.html
+++ b/Toshokan.html
@@ -39,7 +39,7 @@
     </div>
 
       <aside>
-        <h2>Liste</h2>
+        <h2>Notre Sélection</h2>
         <!-- pas de puce stp -->
         <ul style="list-style-type: none;">
           <li><a href="#">Accel World</a></li>
