lien accel world

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Notre Sélection</h2>
         <!-- pas de puce stp -->
         <ul style="list-style-type: none;">
-          <li><a href="#">Accel World</a></li>
+          <li><a href="pages/accel.html">Accel World</a></li>
           <li><a href="#">Bakuman</a></li>
           <li><a href="#">Beastars</a></li>
           <li><a href="#">Bleach</a></li>
