--- a/index.html
+++ b/index.html
@@ -21,22 +21,261 @@
 
     <main>
       
-    <div class="picture">
-      <article>
-        <img class="blue" src="img/AccelWorld.jpg" alt="AccelWorld image"/>
-        <img class="green" src="img/Bakuman.jpg" alt="Bakuman image"/>
-        <img class="blue" src="img/Beastars.jpg" alt="Beastars image" />
-        <img class="green" src="img/Bleach.jpg" alt="Bleach image" /> 
-        <img class="blue" src="img/D.Gray-Man.jpg" alt="D.Gray-Man image" />
-        <img class="green" src="img/Darling.jpg" alt="Darling image" />
-        <img class="blue" src="img/Excel_Saga.png" alt="Excel Saga image" />
-        <img class="green" src="img/Haikyu.jpg" alt="Haikyu image" /> 
-        <img class="blue" src="img/Overlord.jpg" alt="Overlord" /> 
-        <img class="green" src="img/Sky_high_survival.jpg" alt="Sky_high_survival image" />
-        <img class="blue" src="img/Soul_Eater.jpg" alt="Soul_Eater image" />
-        <img class="green" src="img/TatenoYuusha.jpg" alt="TatenoYuusha image" />  
-      </article>
-    </div>
+         <article class="bodyy">
+      <div class="container">
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/AccelWorld.jpg" alt="AccelWorld image">
+          </div>
+          <div class="details">
+            <div class="content">
+              <h3>Accel World</h3>
+            <ul>
+ <li>Éditeur VF : Ototo (Ototo - Shonen)</li>
+ <li>Éditeur VO : ASCII Media Works</li>
+ <li>Illustrations : N&B</li>
+ <li>Code ISBN : 9780316376730</li>
+ <li>Scénariste : Kawahara Reki</li>
+ <li>Dessinateur : Aigamo Hiroyuki</li>
+ <li>Type : Shonen</li>
+ <li>Genres : Action - Drame - Romance - School Life - Science-fiction</li>
+             </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/Bakuman.jpg" alt="Bakuman image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Bakuman</h3>
+            <ul>
+ <li>Éditeur VF : Kana (Kana - Shonen)</li>
+ <li>Éditeur VO : Shueisha</li>
+ <li>Illustrations : N&B</li>
+ <li>Code ISBN : 9782505008262</li>
+ <li>Scénariste : Ohba Tsugumi</li>
+ <li>Dessinateur : Obata Takeshi</li>
+ <li>Traducteur : Thibaud Desbief</li>
+ <li>Type : Shonen</li>
+ <li>Genres : Comédie - Slice of Life</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/Beastars.jpg" alt="Beastars image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Beastars</h3>
+            <ul>
+              <li>Éditeur VF : Ki-oon (Ki-oon - Seinen)</li>
+ <li>Éditeur VO : Akita Shoten</li>
+ <li>Illustrations : N&B</li>
+ <li>Code ISBN : 9791032703793</li>
+ <li>Auteur : Itagaki Paru</li>
+ <li>Traducteur : Anne-Sophie Thévenon</li>
+ <li>Type : Shonen</li>
+ <li>Genres : Action - Comédie - Drame - Mature - Psychologique - Romance - School Life - Slice of Life</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/Bleach.jpg" alt="Bleach image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Bleach</h3>
+            <ul>
+<li>Éditeur VF : Glénat (Glénat - Shonen)</li>
+<li>Éditeur VO : Shueisha</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN : 9782723442275</li>
+<li>Auteur : Kubo Tite</li>
+<li>Type : Shonen</li>
+<li>Genres : Action - Aventure - Comédie - Drame – Fantastique</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/D.Gray-Man.jpg" alt="D.Gray-Man image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>D.Gray-Man</h3>
+            <ul>
+              <li>Éditeur VF : Glénat (Glénat - Shonen)</li>
+<li>Éditeur VO : Shueisha</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782723455848</li>
+<li>Auteur : Hoshino Katsura</li>
+<li>Type : Shonen</li>
+<li>Genres : Aventure - Comédie - Horreur – Surnaturel</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/Darling.jpg" alt="Darling image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>DARLING IN THE FRANXX </h3>
+            <p>Il n'est pas disponible en France pour le moment.</p>
+            <ul>
+<li>Éditeur VO : Shueisha</li>
+<li>Date de parution VO : 02/02/2018</li>
+<li>Illustrations : N&B</li>
+<li>Scénariste : Code:000</li>
+<li>Dessinateur : Yabuki Kentaro</li>
+<li>Type : Shonen</li>
+<li>Genres : Action - Ecchi - Romance - Science-fiction</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/Excel_Saga.png" alt="Excel Saga image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Execel Saga</h3>
+            <ul>
+<li>Éditeur VF : Kabuto</li>
+<li>Éditeur VO : Shonen Gahosha</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782752300553</li>
+<li>Auteur : Rikudo Koshi</li>
+<li>Type : Seinen</li>
+<li>Genres : Action - Comédie - Drame - Science-fiction</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/Haikyu.jpg" alt="Haikyu image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Haikyuu!</h3>
+            <ul>
+<li>Éditeur VF : Kazé (Kazé - Shônen)</li>
+<li>Éditeur VO : Shueisha</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782820316585</li>
+<li>Auteur : Furudate Haruichi</li>
+<li>Type : Shonen</li>
+<li>Genres : Comédie - Drame - School Life</li>
+            </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/Overlord.jpg" alt="Overlord">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Overlord</h3>
+            <ul>
+<li>Éditeur VF : Ototo (Ototo - Seinen)</li>
+<li>Éditeur VO : Kadokawa Shoten</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782375060247</li>
+<li>Scénariste : Oshio Satoshi</li>
+<li>Dessinateur : Miyama Fugin</li>
+<li>Auteur original : Maruyama Kugane</li>
+<li>Type : Seinen</li>
+<li>Genres : Action - Aventure - Drame - Fantastique - Science-fiction</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/Sky_high_survival.jpg" alt="Sky_high_survival image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Sky High Survival</h3>
+            <ul>
+<li>Éditeur VF : Kana (Dark Kana)</li>
+<li>Éditeur VO : Kodansha</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782505066903</li>
+<li>Scénariste : Miura Tsuina</li>
+<li>Dessinateur : Oba Takahiro</li>
+<li>Traducteur : Thibaud Desbief</li>
+<li>Type : Shonen</li>
+<li>Genres : Action - Ecchi - Horreur - Mature – Mystère</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxb">
+          <div class="imgBox">
+            <img src="img/Soul_Eater.jpg" alt="Soul_Eater image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>Soul Eater</h3>
+            <ul>
+<li>Éditeur VF : Kurokawa (Kurokawa - Shonen)</li>
+<li>Éditeur VO : Square Enix</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782351420553</li>
+<li>Auteur : Ohkubo Atsushi</li>
+<li>Traducteurs : Fabien Vautrin, Okazaki Maiko</li>
+<li>Type : Shonen</li>
+<li>Genres : Action - Aventure - Comédie – Fantastique</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+
+        <div class="boxg">
+          <div class="imgBox">
+            <img src="img/TatenoYuusha.jpg" alt="TatenoYuusha image">
+          </div>
+          <div class="details">
+            <div class="content">
+            <h3>The Rising Shield Hero</h3>
+            <ul>
+<li>Éditeur VF : Doki-Doki (Doki-Doki - Seinen)</li>
+<li>Éditeur VO : Media Factory</li>
+<li>Illustrations : N&B</li>
+<li>Code ISBN: 9782818936238</li>
+<li>Scénariste : Aneko Yusagi</li>
+<li>Dessinateur : Aiya Kyu</li>
+<li>Chara-designer : Minami Seira</li>
+<li>Type : Seinen</li>
+<li>Genres : Action - Aventure - Drame – Fantasy</li>
+            </ul>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </article>
 
       <aside>
         <h2>Notre Sélection</h2>
