--- a/pages/accel.html
+++ b/pages/accel.html
@@ -5,7 +5,7 @@
 
     <title>Accel World</title>
     <link rel="shortcut icon" href="../Logo2.0.png" type="image/png">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="stylepage.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
