--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
          <article class="bodyy">
       <div class="container">
-        <div class="boxb">
+        <div class="boxb" style="cursor: pointer;" onclick="window.location='pages/accel.html';">
           <div class="imgBox">
             <img src="img/AccelWorld.jpg" alt="AccelWorld image">
           </div>
