--- a/pages/bleach.html
+++ b/pages/bleach.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Accel World</title>
+    <title>Bleach</title>
     <link rel="shortcut icon" href="../Logo2.0.png" type="image/png">
     <link href="stylepage.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="stylepage.css">
@@ -23,9 +23,9 @@
       <article>
       <div class="content">
       
-        <img class="image" src="../img/AccelWorld.jpg" alt="Accel World image"/>
+        <img class="image" src="../img/Bleach.jpg" alt="Bleach image"/>
         <div class="text">
-        	<h2 class="Bl">Accel World - tome 1</h2>
+        	<h2 class="Bl">Bleach - tome 1</h2>
         	<ul>
         		<li><strong>Éditeur VF :</strong></li>
         		<li><strong>Éditeur VO :</strong></li>
@@ -52,7 +52,7 @@
         <ul style="list-style-type: none;">
           <li><a href="../pages/accel.html">Accel World</a></li>
           <li><a href="../pages/bakuman.html">Bakuman</a></li>
-          <li><a href="../pages/beastar.html">Beastars</a></li>
+          <li><a href="../pages/beastars">Beastars</a></li>
           <li><a href="../pages/bleach.html">Bleach</a></li>
           <li><a href="../pages/dgraym.html">D.Gray-Man</a></li>
           <li><a href="../pages/darling.html">Darling in the FRANXX</a></li>
