--- a/index.html
+++ b/index.html
@@ -16,9 +16,33 @@
     <header>
         <img class="logo" src="Logo2.0.png" alt="Image" />
         <h1>図書館<br>Toshokan</h1>
-        <h1 class="titre">Selection de 12 Manga</h1>
+        <nav>
+          <ul>
+            <li><a href="#"><strong>ACCUEIL</strong></a></li>
+            <li class="deroulant"><a href="#"><strong>GENRES</strong></a>
+              <ul class="sous">
+                <li><a href="#"><strong>Action</strong></a></li>
+                <li><a href="#"><strong>Aventure</strong></a></li>
+                <li><a href="#"><strong>Comédie</strong></a></li>
+                <li><a href="#"><strong>Drama</strong></a></li>
+                <li><a href="#"><strong>Fantastique</strong></a></li>
+                <li><a href="#"><strong>Fantasy</strong></a></li>
+                <li><a href="#"><strong>Horreur</strong></a></li>
+                <li><a href="#"><strong>Mature</strong></a></li>
+                <li><a href="#"><strong>Psychologique</strong></a></li>
+                <li><a href="#"><strong>Romance</strong></a></li>
+                <li><a href="#"><strong>School life</strong></a></li>
+                <li><a href="#"><strong>S.F</strong></a></li>
+                <li><a href="#"><strong>Slice of life</strong></a></li>
+                <li><a href="#"><strong>Surnaturel</strong></a></li>
+              </ul> 
+            </li>
+            <li><a href="#"><strong>EQUIPE</strong></a></li>
+            <li><a href="#"><strong>CONTACT</strong></a></li>
+          </ul>
+     </nav>
     </header>
-
+       
     <main>
       
          <article class="bodyy">
@@ -282,11 +306,11 @@
         <!-- pas de puce stp -->
         <ul style="list-style-type: none;">
           <li><a href="pages/accel.html">Accel World</a></li>
-          <li><a href="#">Bakuman</a></li>
-          <li><a href="#">Beastars</a></li>
-          <li><a href="#">Bleach</a></li>
-          <li><a href="#">D.Gray-Man</a></li>
-          <li><a href="#">Darling in the FRANXX</a></li>
+          <li><a href="pages/bakuman.html">Bakuman</a></li>
+          <li><a href="pages/beastars.html">Beastars</a></li>
+          <li><a href="pages/bleach.html">Bleach</a></li>
+          <li><a href="pages/dgraym.html">D.Gray-Man</a></li>
+          <li><a href="pages/darling.html">Darling in the FRANXX</a></li>
           <li><a href="#">Excel Saga</a></li>
           <li><a href="#">Haikyuu</a></li>
           <li><a href="#">Overlord</a></li>
