--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
           <li><a href="pages/bleach.html">Bleach</a></li>
           <li><a href="pages/dgraym.html">D.Gray-Man</a></li>
           <li><a href="pages/darling.html">Darling in the FRANXX</a></li>
-          <li><a href="#">Excel Saga</a></li>
-          <li><a href="#">Haikyuu</a></li>
-          <li><a href="#">Overlord</a></li>
-          <li><a href="#">Sky High Survival</a></li>
-          <li><a href="#">Soul Eater</a></li>
-          <li><a href="#">Tate no Yuusha no Nariagi</a></li>
+          <li><a href="pages/9782752300553.html">Excel Saga</a></li>
+          <li><a href="pages/9782820316585.html">Haikyuu</a></li>
+          <li><a href="pages/9782375060247.html">Overlord</a></li>
+          <li><a href="pages/9782505066903.html">Sky High Survival</a></li>
+          <li><a href="pages/9782351420553.html">Soul Eater</a></li>
+          <li><a href="pages/9782818936238.html">Tate no Yuusha no Nariagi</a></li>
         </ul>
       </aside>
     </main>
